--- a/docs-2.0/backup-and-restore/nebula-br-ent/1.br-ent-overview.md
+++ b/docs-2.0/backup-and-restore/nebula-br-ent/1.br-ent-overview.md
@@ -2,7 +2,7 @@
 
 Backup Restore (BR for short) Enterprise Edition is a Command-Line Interface (CLI) tool. With BR Enterprise Edition, you can back up and restore NebulaGraph data.
 
-For the deployment of BR in K8s Operator, see [Backup and restore data using NebulaGraph Operator](../../k8s-operator/4.cluster-administration/4.6.backup-and-restore.md).
+For the deployment of BR in K8s Operator, see [Backup and restore data using NebulaGraph Operator](../../k8s-operator/4.cluster-administration/4.6.backup-and-restore/4.6.0.overview.md).
 
 !!! enterpriseonly
 
