--- a/docs-2.0/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -245,12 +245,12 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
       | `spec.enablePVReclaim`                                      | `false`                  | Defines whether to automatically delete PVCs after deleting the cluster to release data. For details, see [Reclaim PV](../4.4.storage-management/4.4.3.configure-pv-reclaim.md).                                                                                                                                                                                                   |
       | `spec.metad.licenseManagerURL`                              | -                        | Configures the URL pointing to the License Manager (LM), consisting of the access address and port (default port `9119`). For example, `192.168.8.xxx:9119`. **You must configure this parameter to obtain the License information; otherwise, the NebulaGraph cluster will not function.**                                                                                        |
       | `spec.storaged.enableAutoBalance`                           | `false`                  | Whether to enable automatic balancing. For details, see [Balancing Storage Data After Scaling Out](../4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md).                                                                                                                                                                                                                 |
-      | `spec.enableBR`                                             | `false`                  | Defines whether to enable the BR tool. For details, see [Backup and Restore](../4.6.backup-and-restore.md).                                                                                                                                                                                                                                                                        |
+      | `spec.enableBR`                                             | `false`                  | Defines whether to enable the BR tool. For details, see [Backup and Restore](../4.6.backup-and-restore/4.6.0.overview.md).                                                                                                                                                                                                                                                                        |
       | `spec.imagePullSecrets`                                     | `[]`                     | Defines the Secret required to pull images from a private repository.                                                                                                                                                                                                                                                                                                              |
       |                                                             |                          |                                                                                                                                                                                                                                                                                                                                                                                    |
 
 
-4. Create the NebulaGraph cluster.
+1. Create the NebulaGraph cluster.
 
   ```bash
   kubectl create -f apps_v1alpha1_nebulacluster.yaml -n nebula
@@ -497,7 +497,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
         | `nebula.imagePullPolicy`                                    | `Always`                                                                                              | Container image pull policy. `Always` means always attempting to pull the latest image from the remote.                                                                                         |
         | `nebula.storageClassName`                                   | `""`                                                                                                  | Name of the Kubernetes storage class for dynamic provisioning of persistent volumes.                                                                                                         |
         | `nebula.enablePVReclaim`                                    | `false`                                                                                               | Enable persistent volume reclaim. See [Reclaim PV](../4.4.storage-management/4.4.3.configure-pv-reclaim.md) for details.                                                                     |
-        | `nebula.enableBR`                                           | `false`                                                                                               | Enable the backup and restore feature. See [Backup and Restore with NebulaGraph Operator](../4.6.backup-and-restore.md) for details.                                                       |
+        | `nebula.enableBR`                                           | `false`                                                                                               | Enable the backup and restore feature. See [Backup and Restore with NebulaGraph Operator](../4.6.backup-and-restore/4.6.0.overview.md) for details.                                                       |
         | `nebula.enableForceUpdate`                                  | `false`                                                                                               | Force update the Storage service without transferring the leader partition replicas. See [Optimize leader transfer in rolling updates](../4.9.advanced/4.9.1.rolling-update-strategy.md) for details. |
         | `nebula.schedulerName`                                      | `default-scheduler`                                                                                   | Name of the Kubernetes scheduler. Must be configured as `nebula-scheduler` when using the [Zone](../4.8.ha-and-balancing/4.8.2.enable-zone.md) feature.                                          |
         | `nebula.topologySpreadConstraints`                          | `[]`                                                                                                  | Control the distribution of pods in the cluster.                                                                                                                                             |
@@ -605,4 +605,4 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
 
 ## Related topics
 
-[Enabling Zones in a Cluster](../4.8.ha-and-balancing/4.8.2.enable-zone.md)
+[Enabling zones in a cluster](../4.8.ha-and-balancing/4.8.2.enable-zone.md)
