--- a/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
@@ -1051,7 +1051,7 @@ After applying the cluster configuration file by running `kubectl apply -f`, you
 
 !!! note
 
-    When mTLS is required for external clients to connect to the Graph service, you need to set the relevant SSL fields depending on different [clients](../../14.client/1.nebula-client.md). 
+    When mTLS is required for external clients to connect to the Graph service, you need to set the relevant SSL fields depending on different [clients](../../../14.client/1.nebula-client.md). 
 
 You can configure `spec.console` to start a NebulaGraph Console container in the cluster. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).
 
